crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__binding_an_array_property_read_to_a_local_retains_it.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @10:5-10:29
    v1 = const.int 1  ; int
    v2 = array.new ["0": v1]  ; array
    v3 = new Foo(v2) ! bb1  ; object
    ; stmt s1 @11:5-11:25
    v4 = field.get v3, Foo::data  ; array
    retain v4
    release v4
    return
  bb1:
    propagate "m() at t.mwl:10"
}
