crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__break_merges_a_differing_value_into_the_after_block.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:16
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-5:16
    v3 = const.int 0  ; int
    ; stmt s2 @6:5-12:6
    jump bb1
  bb1:
    v4 = phi [bb0: v3, bb4: v5]  ; int
    v5 = phi [bb0: v2, bb4: v10]  ; int
    v6 = lt v5, v1  ; bool
    branch v6 -> bb2 (e0), bb3 (e1)
  bb2:
    ; stmt s3 @6:21-12:6
    ; stmt s4 @7:7-7:15
    ; stmt s5 @8:7-10:8
    v7 = const.int 3  ; int
    v8 = eq v5, v7  ; bool
    branch v8 -> bb5 (e2), bb4 (e3)
  bb3:
    v11 = phi [bb1: v4, bb5: v5]  ; int
    ; stmt s9 @13:5-13:15
    return v11
  bb4:
    ; stmt s8 @11:7-11:19
    v9 = const.int 1  ; int
    v10 = add v5, v9  ; int
    safepoint
    jump bb1
  bb5:
    ; stmt s6 @8:20-10:8
    ; stmt s7 @9:9-9:15
    jump bb3
}
