crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__concatenating_a_bool_local_with_a_string_uses_a_helper_call.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bool) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    ; stmt s0 @4:5-4:24
    v2 = helper.bool_to_string v1  ; string
    v3 = const.str "!"  ; string
    v4 = concat v2, v3  ; string
    release v2
    release v3
    release v0
    return v4
}
