crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__concatenating_an_int_literal_with_a_string_uses_a_helper_call.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:20
    v1 = const.int 1  ; int
    v2 = helper.int_to_string v1  ; string
    v3 = const.str "x"  ; string
    v4 = concat v2, v3  ; string
    release v2
    release v3
    return v4
}
